--- a/RawConverter/Resources.resx
+++ b/RawConverter/Resources.resx
@@ -127,6 +127,9 @@
   <data name="ApplicationDescription" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\ApplicationDescription.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="Cancel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Cancel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ClearAllItems" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\ClearAllItems.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
